# npg_id_generation

./: .flake8  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
npg_id_generation/: __init__.py  main.py  pac_bio.py
tests/: test_hashing.py
