[tool.poetry]
name = "npg_id_generation"
version = "0.1.0"
description = "Product ID generation."
authors = ["Adam Blanchet <ab59@sanger.ac.uk>"]
license = "GPL3-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
